--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:h2:C:/Users/ekb-l/IdeaProjects/test-security2db-thymeleaf/testdb/students
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= true
+spring.main.allow-circular-references=true
